--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Hope Foundation - Transforming Lives Together</title>
     <meta name="description"
         content="Join us in making a difference. Hope Foundation brings education, food, and healthcare to communities in need.">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
